# MachineLearning

./: house_pricing.ipynb  pyproject.toml
breast_cancer_detection/: bc_detection.ipynb
breast_cancer_detection/.ipynb_checkpoints/: bc_detection-checkpoint.ipynb
email_spam_detection/: bow.ipynb
house_pricing/: house_pricing.ipynb
kmeans_cluster/: salary_problem.ipynb
knn/: iris.ipynb
naive_bayes/: naive_bayes.ipynb
neural_networks/cats_and_dogs_clasifier/: cats_dogs_cnn.ipynb
neural_networks/cnn_image_clasifier/: cnn.ipynb
neural_networks/diabetes_prj/: nn_diabetes.ipynb
neural_networks/imaginary_clinic_project/: nn.ipynb
neural_networks/prj1_wine_reviews/: tensorflow_prj.ipynb
pca_problem/: digits_pca.ipynb
random_forest/bank_note_auth/: bank_na.ipynb
random_forest/heart_disease/: heart_dis.ipynb
svm_breast_cancer/: svm.ipynb
